# acaer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/Scenes/: scene.acs
doc/: ECS.md  KeyMap.md  LibaryHandling.md  acaer_gameLoop.drawio  acaer_overview.drawio
lib/box2d/: README.md
lib/box2d/lib/: box2d.lib
lib/lua/: README.md
resource/images/: acaer_logo.rc
src/: main.cpp
src/acaer/: Acaer.h  ac_pch.h
src/acaer/Core/: Core.cpp  Core.h  Log.cpp  Log.h
src/acaer/Core/Debug/: Instrumentor.cpp  Instrumentor.h
src/acaer/Core/Events/: EventManager.cpp  EventManager.h
src/acaer/Core/ScriptEngine/: ScriptEngine.h
src/acaer/Helper/: Types.h
src/acaer/Helper/Convert/: Convert.cpp  Convert.h
src/acaer/Helper/UUID/: UUID.cpp  UUID.h
src/acaer/Helper/Util/: Math.h
src/acaer/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiPanel.h  ImGuiPanelStack.h
src/acaer/ImGui/Panels/: EntityBrowserPanel.cpp  EntityBrowserPanel.h  SandWorldEditorPanel.cpp  SandWorldEditorPanel.h  SceneEditorPanel.cpp  SceneEditorPanel.h
src/acaer/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
src/acaer/Scene/Camera/: Camera.h
src/acaer/Scene/ContactListener/: ContactListener.h
src/acaer/Scene/Entity/: Components.h  Entity.h  ScriptableEntity.h
src/acaer/Scene/Handlers/: AnimationHandler.cpp  AnimationHandler.h  SpriteHandler.cpp  SpriteHandler.h  TextureHandler.cpp  TextureHandler.h
src/acaer/Scene/Renderer/: DebugRenderer.cpp  DebugRenderer.h  Renderer.cpp  Renderer.h
src/acaer/Scene/World/: Cell.h  SandWorld.cpp  SandWorld.h  SandWorldChunk.h  World.cpp  World.h  WorldChunk.h
src/acaer/Scripts/Lua/: testScript.lua
src/acaer/Scripts/Player/: CharacterController.h
